erDiagram
    organizations ||--o{ users : has
    organizations ||--o{ vendors : has
    organizations ||--o{ contracts : has
    vendors ||--o{ contracts : has
    contracts ||--o{ contract_terms : has
    contracts ||--o{ alerts : has
    contracts ||--o{ notes : has
    users ||--o{ notes : writes
    users ||--o{ alerts : receives

    organizations {
        uuid id PK
        string name
        string plan
        timestamp created_at
    }

    users {
        uuid id PK
        uuid org_id FK
        string email
        string name
        string role
        jsonb alert_preferences
        timestamp created_at
    }

    vendors {
        uuid id PK
        uuid org_id FK
        string name
        string category
        string contact_email
        decimal total_spend
        timestamp created_at
    }

    contracts {
        uuid id PK
        uuid org_id FK
        uuid vendor_id FK
        uuid uploaded_by FK
        string title
        string status
        decimal annual_value
        date start_date
        date end_date
        boolean auto_renew
        integer notice_period_days
        string file_url
        string risk_level
        timestamp created_at
    }

    contract_terms {
        uuid id PK
        uuid contract_id FK
        string term_type
        string term_value
        text raw_text
        float confidence
    }

    alerts {
        uuid id PK
        uuid contract_id FK
        uuid user_id FK
        string alert_type
        integer days_before
        timestamp scheduled_for
        timestamp sent_at
        string status
    }

    notes {
        uuid id PK
        uuid contract_id FK
        uuid user_id FK
        text content
        timestamp created_at
    }